// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders black (default color prop) Heading with vertical margins 1`] = `
.c0 {
  font-size: 40px;
  font-family: Lato,sans-serif;
  margin-top: 30px;
  margin-bottom: 30px;
}

<Heading
  bold={false}
  className="c0"
  marginBottom="30px"
  marginTop="30px"
  mono={false}
  size="XL"
  uppercase={false}
>
  MONO
</Heading>
`;

exports[`renders black L Heading 1`] = `
.c0 {
  font-size: 30px;
  font-family: Lato,sans-serif;
  color: #000000;
  margin-top: 40px;
  margin-bottom: 40px;
}

<Heading
  black={true}
  bold={false}
  className="c0"
  marginBottom={null}
  marginTop={null}
  mono={false}
  size="L"
  uppercase={false}
>
  $
  L
</Heading>
`;

exports[`renders black M Heading 1`] = `
.c0 {
  font-size: 17px;
  font-family: Lato,sans-serif;
  color: #000000;
  margin-top: 20px;
  margin-bottom: 20px;
}

<Heading
  black={true}
  bold={false}
  className="c0"
  marginBottom={null}
  marginTop={null}
  mono={false}
  size="M"
  uppercase={false}
>
  $
  M
</Heading>
`;

exports[`renders black S Heading 1`] = `
.c0 {
  font-size: 15px;
  font-family: Lato,sans-serif;
  color: #000000;
  margin-top: 10px;
  margin-bottom: 10px;
}

<Heading
  black={true}
  bold={false}
  className="c0"
  marginBottom={null}
  marginTop={null}
  mono={false}
  size="S"
  uppercase={false}
>
  $
  S
</Heading>
`;

exports[`renders black XL Heading 1`] = `
.c0 {
  font-size: 40px;
  font-family: Lato,sans-serif;
  color: #000000;
  margin-top: 50px;
  margin-bottom: 50px;
}

<Heading
  black={true}
  bold={false}
  className="c0"
  marginBottom={null}
  marginTop={null}
  mono={false}
  size="XL"
  uppercase={false}
>
  $
  XL
</Heading>
`;

exports[`renders bold and uppercase lighter gray Heading 1`] = `
.c0 {
  font-size: 40px;
  font-family: Lato,sans-serif;
  font-weight: bold;
  color: #707070;
  text-transform: uppercase;
  margin-top: 50px;
  margin-bottom: 50px;
}

<Heading
  bold={true}
  className="c0"
  lighterGray={true}
  marginBottom={null}
  marginTop={null}
  mono={false}
  size="XL"
  uppercase={true}
>
  MONO
</Heading>
`;

exports[`renders dark purple Heading 1`] = `
.c0 {
  font-size: 40px;
  font-family: Lato,sans-serif;
  color: #5346AE;
  margin-top: 50px;
  margin-bottom: 50px;
}

<Heading
  bold={false}
  className="c0"
  darkPurple={true}
  marginBottom={null}
  marginTop={null}
  mono={false}
  size="XL"
  uppercase={false}
>
  MONO
</Heading>
`;

exports[`renders mono dark gray Heading with default prop XL 1`] = `
.c0 {
  font-size: 40px;
  font-family: Source Code Pro,monospace;
  color: #16111C;
  margin-top: 50px;
  margin-bottom: 50px;
}

<Heading
  bold={false}
  className="c0"
  darkGray={true}
  marginBottom={null}
  marginTop={null}
  mono={true}
  size="XL"
  uppercase={false}
>
  DARK GRAY MONO
</Heading>
`;

exports[`renders purple Heading 1`] = `
.c0 {
  font-size: 40px;
  font-family: Lato,sans-serif;
  color: #6C5FC7;
  margin-top: 50px;
  margin-bottom: 50px;
}

<Heading
  bold={false}
  className="c0"
  marginBottom={null}
  marginTop={null}
  mono={false}
  purple={true}
  size="XL"
  uppercase={false}
>
  MONO
</Heading>
`;
